--- a/EasySaveUI/App.axaml
+++ b/EasySaveUI/App.axaml
@@ -1,6 +1,11 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="EasySaveGUI.App">
+             xmlns:local="using:EasySaveUI"
+             x:Class="EasySaveUI.App">
+    <Application.DataTemplates>
+        <local:ViewLocator/>
+    </Application.DataTemplates>
+
     <Application.Styles>
         <FluentTheme Mode="Dark"/>
     </Application.Styles>
