--- a/EasySaveUI/Views/MainWindow.axaml
+++ b/EasySaveUI/Views/MainWindow.axaml
@@ -12,14 +12,18 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-	<Grid>
+	<Grid Background="#0F0F2D">
 
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="4*"/>
 		</Grid.ColumnDefinitions>
-		<Border Grid.Column="0" BorderBrush="White" BorderThickness="0 0 6 0"> 
-		<Grid Background="#0F0F2D"
+		<Border Grid.Column="0"
+		        CornerRadius="10"
+		        BorderBrush="White"
+		        BorderThickness="2"
+		        Margin="5 5 5 5"> 
+		<Grid 
 			  Grid.ColumnSpan="1">
 			<Grid.RowDefinitions>
 				<RowDefinition/>
@@ -55,6 +59,7 @@
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
+					Command="{Binding OnClickDelete}"
 					/>
 			<Button Width="100"
 					Grid.Row="3"
@@ -65,6 +70,7 @@
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
+					Command="{Binding OnClickStart}"
 					/>
 			<Button Width="100"
 					Grid.Row="4"
@@ -75,6 +81,7 @@
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
+					Command="{Binding OnClickCreated}"
 					/>
 			
 			<Button Width="100"
@@ -99,23 +106,47 @@
 					/>
 		</Grid>
 		</Border>
-		<Grid Grid.Column="1" 
-			  Grid.ColumnSpan="2"
-			  >
-			<Grid
-			  Grid.ColumnSpan="1">
+		<Grid Grid.Column="1" >
+			<Grid Margin="20 10 10 0">
+				
 				<Grid.RowDefinitions>
 					<RowDefinition Height="4*"/>
 					<RowDefinition/>
 				</Grid.RowDefinitions>
 
-				<DataGrid
-					Grid.Row="0"
-					AutoGenerateColumns="True" 
-					Items="{Binding Jobs}"
-					/>
+				<DataGrid Grid.Row="0"
+				          Padding="50"
+				          Background="#1F1F34"
+				          Items="{Binding Jobs}">
+					<DataGrid.Columns>
+						<DataGridTemplateColumn Header="Select" >
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<CheckBox HorizontalAlignment="Center"
+									          IsChecked="{Binding IsChecked}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>             
+						<DataGridTextColumn Header="Name" 
+						                    Binding="{Binding Name}" 
+						                    IsReadOnly="True"
+						                    Width="2*" />
+						<DataGridTextColumn Header="Source" 
+						                    Binding="{Binding SourcePath}" 
+						                    IsReadOnly="True"
+						                    Width="4*" />
+						<DataGridTextColumn Header="Destination" 
+						                    Binding="{Binding DestinationPath}" 
+						                    IsReadOnly="True"
+						                    Width="4*" />
+						<DataGridTextColumn Header="Status" 
+						                    Binding="{Binding Status}" 
+						                    IsReadOnly="True"
+						                    Width="*" />
+					</DataGrid.Columns>
+				</DataGrid>
 
-				<Grid Grid.Row="1" RowSpan="1" Background="#0F0F2D" >
+				<Grid Grid.Row="1" Background="#0F0F2D" >
 				<Button FontSize="20"
 					Margin="10"
 					Foreground="White"
@@ -127,6 +158,7 @@
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
 					VerticalAlignment="Center"
+					Command="{Binding OnClickSelectAll}"
 					/>
 				</Grid>
 			</Grid>
