radios buttons fix & trad 0.1

--- a/EasySaveUI/Views/CreatePage.axaml
+++ b/EasySaveUI/Views/CreatePage.axaml
@@ -2,10 +2,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:vm="using:EasySaveUI.ViewModels"
+		xmlns:p="using:EasySaveConsole.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="EasySaveUI.Views.CreatePage"
+		xmlns:converter="using:EasySaveUI.Converter"
         Title="New Save">
+	<Window.Resources>
+		<converter:EnumBooleanConverter x:Key="enumBooleanConverter" />
+	</Window.Resources>
     <Design.DataContext>
         <vm:CreatePageViewModel/>
     </Design.DataContext>
@@ -25,44 +30,45 @@
 				<RowDefinition/>
 			</Grid.RowDefinitions>
 			<StackPanel Grid.Row="1" Margin="20">
-			<TextBlock Text="Nouvelle Sauvegarde"  FontSize="30" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+			<TextBlock Text="{x:Static p:Resources.create_saving_job}"  FontSize="30" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 			
 			
 		</StackPanel>
 		
 		<StackPanel Grid.Row="2" Margin="20">
 		
-			<TextBlock Text="Entrer le nom de votre sauvegarde" Foreground="White"/>
+			<TextBlock Text="{x:Static p:Resources.enter_job_name}" Foreground="White"/>
 			<Separator Height="10" Background="Transparent"/>
 			<TextBox  Name="TextBlockName" Text="{Binding Path=SaveNameField}" />
 			 
 		</StackPanel>
 	
 		<StackPanel Grid.Row="3" Margin="20">
-			<TextBlock Text="Selectionner les fichiers source" Foreground="White"/>
+			<TextBlock Text="{x:Static p:Resources.enter_source_path}" Foreground="White"/>
 			<Separator Height="10" Background="Transparent"/>
 			<TextBox  Name="TextBlockSource" Text="{Binding Path=ValueSource}" />
 			<Separator Height="5" Background="Transparent"/>
-				<Button Content="Parcourrir"  Foreground="White" Background="Gray" Command="{Binding OnClickBrowseFiles}"/>
+				<Button Content="{x:Static p:Resources.browse}"  Foreground="White" Background="Gray" Command="{Binding OnClickBrowseFiles}"/>
 		</StackPanel>
 		<StackPanel Grid.Row="4" Margin="20">
-			<TextBlock Text="Selectionner le chemin de destinaion" Foreground="White"/>
+			<TextBlock Text="{x:Static p:Resources.enter_destination_path}" Foreground="White"/>
 			<Separator Height="10" Background="Transparent"/>
 			<TextBox Name="TextBlockDestination" Text="{Binding Path=ValueDestination}"/>
 			<Separator Height="5" Background="Transparent"/>
-			<Button Content="Parcourrir"  Foreground="White" Background="Gray" Command="{Binding OnClickBrowseFolder}" />
+			<Button Content="{x:Static p:Resources.browse}"  Foreground="White" Background="Gray" Command="{Binding OnClickBrowseFolder}" />
 		</StackPanel>
 		<StackPanel Grid.Row="5" Margin="20">
-			<TextBlock Text="Type de sauvegarde" Foreground="White"/>
-			<RadioButton IsChecked="{Binding Path=RadioPartialCheck}" Name="Partial" Foreground="White">Partielle</RadioButton>
-			<RadioButton IsChecked="{Binding Path=RadioEntireCheck}" Name="Entire" Foreground="White" >Entière</RadioButton>		
+			<TextBlock Text="{x:Static p:Resources.enter_job_type}" Foreground="White"/>
+			<RadioButton IsChecked="{Binding Path=saveType, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Partial}" Content="{x:Static p:Resources.diferential}"></RadioButton>
+			<RadioButton IsChecked="{Binding Path=saveType, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Complete}" Content="{x:Static p:Resources.complete}"></RadioButton>	
 		</StackPanel>
+			
 			<Button Width="100"
 					Grid.Row="6"
 					Command="{Binding OnClickCreate}"
 					Foreground="White"
 					Background="#FF4C70"
-					Content="Créer"
+					Content="{x:Static p:Resources.create}"
 					CornerRadius="12"
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
