--- a/EasySaveUI/Views/CreatePage.axaml
+++ b/EasySaveUI/Views/CreatePage.axaml
@@ -72,7 +72,7 @@
 					</StackPanel>
 				</StackPanel>
 			</Grid>
-			
+			<StackPanel>
 			<Button Width="100"
 					Grid.Row="1"
 					Command="{Binding OnClickCreate}"
@@ -87,11 +87,13 @@
 					HorizontalAlignment="Center"
 					/>
 			<TextBlock IsVisible="false" 
+					   Margin="5 0 0 0"
 					   HorizontalAlignment="Center" 
 					   VerticalAlignment="Center" 
 					   Foreground="red" 
 					   Name="errorLabel" 
 					   Grid.Row="7" 
 					   Text="{x:Static p:Resources.error_create}" />
-		</Grid>
+			</StackPanel>
+			</StackPanel>
 </Window>
