--- a/EasySaveUI/Views/LogsWindow.axaml
+++ b/EasySaveUI/Views/LogsWindow.axaml
@@ -13,15 +13,23 @@
 		</Design.DataContext>
 		
 		<StackPanel Background="#0F0F2D">
-			<Button Name ="Back" Content="◀" Command="{Binding ElementName=logsWindow, Path=DataContext.ButtonBack}" Margin="10" Background="#0F0F2D"/>
+			<Button Name ="Back" Content="◀" Command="{Binding OnClickBack}" Margin="10" Background="#0F0F2D"/>
 			<TextBlock Text="Logs" Margin="0 0 0 20" FontSize="30" Foreground="White" HorizontalAlignment="Center" />
-			<Border Background="#0B0B21" Width="200" Height="300" CornerRadius="10" BorderBrush="White" BorderThickness="2" Margin="5 5 5 5">
+			<Border Background="#0B0B21" Width="300" Height="600" CornerRadius="10" BorderBrush="White" BorderThickness="2" Margin="5 5 5 5">
 				<DataGrid HorizontalAlignment="Center" Items="{Binding Logs}">
 					<DataGrid.Columns>
 						<DataGridTemplateColumn>
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate>
-									<Button Content="{Binding}" Command="{Binding ElementName=logsWindow, Path=DataContext.ButtonLog}" CommandParameter="{Binding}" IsEnabled="true" Width="170"  Height="30" HorizontalAlignment="Center" Margin="3"/>
+									<Button Content="{Binding}"
+											Command="{Binding ElementName=logsWindow, Path=DataContext.OnClickLog}" 
+											CommandParameter="{Binding}"
+											HorizontalContentAlignment="Center"
+											IsEnabled="true" 
+											Width="270"  
+											Height="30" 
+											HorizontalAlignment="Center" 
+											Margin="3"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
