Problème avec CryptoFile résolue : - génère une clé de 16 caractère aléatoire et l'enregistre dans le fichier setting.json - Utilise cette clé pour chiffrer les fichiers

--- a/EasySaveUI/Views/MainWindow.axaml
+++ b/EasySaveUI/Views/MainWindow.axaml
@@ -79,7 +79,7 @@
 					HorizontalAlignment="Center"
 					Command="{Binding OnClickStart}"
 					/>
-			<Button Width="100"
+			<!--<Button Width="100"
 					Name="decrypt"
 					Grid.Row="4"
 					Foreground="White"
@@ -90,7 +90,7 @@
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
 					Command="{Binding OnClickCreated}"
-					/>
+					/>-->
 			
 			<Button Width="100"
 					Grid.Row="7"
