Play, Pause, Stop : - Ajout des boutons Pause et Stop dans le MainMenu - Ajout de la propriété  'int volatile state' dans la Class Job pour mesurer l'état du job (0 = STOP/END/TO DO , 1 = ACTIVE , 2 = PAUSE ) - Ajout d'une méthode pour arréter ou mettre en pause un job en vérifiant Job.state - Amélioration des méthodes copyFilesPartialSave et copyFilesEntireSave

--- a/EasySaveUI/Views/MainWindow.axaml
+++ b/EasySaveUI/Views/MainWindow.axaml
@@ -79,18 +79,30 @@
 					HorizontalAlignment="Center"
 					Command="{Binding OnClickStart}"
 					/>
-			<!--<Button Width="100"
-					Name="decrypt"
+			<Button Width="100"
+					Name="pause"
 					Grid.Row="4"
 					Foreground="White"
 					Background="#FF4C70"
-					Content="{x:Static p:Resources.decrypt}"
+					Content="{x:Static p:Resources.pause}"
 					CornerRadius="12"
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
 					HorizontalAlignment="Center"
-					Command="{Binding OnClickCreated}"
-					/>-->
+					Command="{Binding OnClickPause}"
+					/>
+			<Button Width="100"
+					Name="stop"
+					Grid.Row="5"
+					Foreground="White"
+					Background="#FF4C70"
+					Content="{x:Static p:Resources.stop}"
+					CornerRadius="12"
+					VerticalContentAlignment="Center"
+					HorizontalContentAlignment="Center"
+					HorizontalAlignment="Center"
+					Command="{Binding OnClickStop}"
+					/>
 			
 			<Button Width="100"
 					Grid.Row="7"
